--- a/dd.html
+++ b/dd.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/login">login</a>
-    <a href="/logout">logout</a>
-
+    haha
 </body>
 </html>
